--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container-fluid bg-peach">
-        <h6>Timer by default is 20 min</h6>
+        <h5>Timer by default is 20 min</h5>
         <div class="container col-11 col-sm-2 col-md-4 col-xl-2 bg-brown">
             <div class="row d-flex justify-content-center">
                 <div class="bg-light col-8" id="timer">
@@ -53,6 +53,7 @@
             </div>
         </div>
     </div>
+    <audio id="beepAudio"></audio>
     <script src="timer.js"></script>
 </body>
 </html>
